[gd_scene load_steps=4 format=3 uid="uid://6eai37ui385k"]

[ext_resource type="Script" path="res://scenes/player/player.gd" id="1_0vabf"]
[ext_resource type="Texture2D" uid="uid://dq406nghghsr" path="res://graphics/player/player.png" id="1_drx2g"]

[sub_resource type="CircleShape2D" id="CircleShape2D_cc56w"]
radius = 60.0

[node name="Player" type="CharacterBody2D"]
script = ExtResource("1_0vabf")

[node name="PlayerImage" type="Sprite2D" parent="."]
position = Vector2(35, 2.5)
rotation = 1.5708
texture = ExtResource("1_drx2g")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_cc56w")

[node name="LaserShootTimer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="GrenadeReloadTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="LaserStartPositions" type="Node2D" parent="."]

[node name="Marker2D" type="Marker2D" parent="LaserStartPositions"]
position = Vector2(130, 21)

[node name="Marker2D2" type="Marker2D" parent="LaserStartPositions"]
position = Vector2(127, 14)

[node name="Marker2D3" type="Marker2D" parent="LaserStartPositions"]
position = Vector2(127, 28)

[connection signal="timeout" from="LaserShootTimer" to="." method="_on_laser_shoot_timer_timeout"]
[connection signal="timeout" from="LaserShootTimer" to="." method="_on_timer_timeout"]
[connection signal="timeout" from="GrenadeReloadTimer" to="." method="_on_grenade_reload_timer_timeout"]
